# rust-esp-debug

./: Cargo.toml  build.rs  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
scripts/: flash_monitor.sh
src/: eth.rs  lib.rs  main.rs  wifi.rs
