[package]
name = "rust-esp-debug"
edition = "2021"
version = "0.0.1"

[profile.release]
opt-level = "s"
debug = true    # Symbols are nice and they don't increase the size on Flash

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
# default = ["qemu"]
# Enable this feature if you are building for QEMU
qemu = []

[patch.crates-io]
# has an extra commit for showing the error faster
esp-idf-svc = { git = "https://github.com/mike1703/esp-idf-svc.git"}
# esp-idf-svc = { path = "repos/esp-idf-svc/"}

[dependencies]
log = "0.4.20"
esp-idf-sys = { version = "0.33.7", features = ["binstart"] }
esp-idf-svc = "0.47.3"
esp-idf-hal = "0.42.5"
embedded-svc = "0.26.4"
heapless = "0.7.17"

[build-dependencies]
embuild = "0.31.4"

[package.metadata.espflash]
partition_table = "partitions.csv"
